Fixing map to token alignment.

--- a/app/public/css/base.css
+++ b/app/public/css/base.css
@@ -3,3 +3,8 @@
     z-index: 10;
     width: 50px;
 }
+
+.img_background{
+    margin-top: 8px;
+    margin-left: 8px;
+}
