--- a/html/css/base.css
+++ b/html/css/base.css
@@ -3,3 +3,7 @@
     z-index: 10;
     width: 50px;
 }
+
+.img_background{
+    top: 10px;
+}
